--- a/client/views/analytics/index.html
+++ b/client/views/analytics/index.html
@@ -1,118 +1,23 @@
 <div class="sd-page-grid--basic">
-    <header class="sd-top-menu">
-        <a href="" class="sd-top-menu__collapse-nav"><i class="icon-collapse icon--white"></i></a>
-        <p class="sd-top-menu__header">Publisher</p>
-    </header>
+  <header class="sd-top-menu">
+    <a href="" class="sd-top-menu__collapse-nav"
+      ><i class="icon-collapse icon--white"></i
+    ></a>
+    <p class="sd-top-menu__header">Publisher</p>
+  </header>
 
-    <section class="sd-content sd-page-content--slide-in">
-        <div class="sd-loader" ng-if="loading"></div>
-        <div class="sd-sidebar-menu sd-sidebar-menu--second-level sd-page-content__left-tabs" ng-include="'sidebar-content.html'"></div>
-        <div class="sd-page-content__content-block" ng-class="{'open-filters': webPublisherAnalytics.leftFilterOpen}">
-            <div class="subnav">
-                <a href="#/publisher/dashboard" class="navbtn navbtn--left"
-                    sd-tooltip="Dashboard" flow="right">
-                    <i class="icon-arrow-left"></i>
-                </a>
-                <h3 class="subnav__page-title">Content Analytics
-                        <span ng-if="webPublisherAnalytics.selectedTenant.name">/ {{webPublisherAnalytics.selectedTenant.name}}</span>
-                </h3>
-            </div>
-            <div class="sd-column-box--3" ng-class="{'content-nav-closed' : webPublisherAnalytics.closedContentNav}">
-                    <div class="nav-tabs-vertical"
-                    ng-class="{'nav-tabs-vertical--closed' : !webPublisherAnalytics.closedContentNav }">
-                    <ul class="nav-tabs-vertical__list">
-                        <li class="nav-tabs-vertical__tab">
-                            <button class="nav-tabs-vertical__link"
-                                ng-click="webPublisherAnalytics.closedContentNav = !webPublisherAnalytics.closedContentNav">Website</button>
-                        </li>
-                    </ul>
-                </div>
-                <div class="sd-content-navigation-panel sd-content-navigation-panel--border-right">
-                    <div class="subnav subnav--padded subnav--lower-z-index">
-                        <h3 class="sd-content-nav-title sd-content-nav-title--uppercase">Website</h3>
-                        <a class="icn-btn ml-auto"
-                            ng-click="webPublisherAnalytics.closedContentNav = !webPublisherAnalytics.closedContentNav"
-                            ng-init="webPublisherAnalytics.closedContentNav = false">
-                            <i class="icon-close-small"></i></a>
-                    </div>
-                    <nav class="sd-content-nav">
-                        <ul>
-                            <li ng-repeat="site in webPublisherAnalytics.sites">
-                                <a href="" class="sd-content-nav__btn"
-                                    ng-click="webPublisherAnalytics.setTenant(site)"
-                                    ng-class="{'sd-content-nav__btn--active' : webPublisherAnalytics.selectedTenant.code === site.code}">
-                                    {{:: site.name }}</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="flex-grid flex-grid--grow flex-grid--small-1">
-                    <div class="flex-grid__item flex-grid__item--d-flex flex-grid__item--column">
-                        <div class="subnav subnav--lower-z-index">
-                            <button class="navbtn navbtn--left navbtn--darker" ng-click="webPublisherAnalytics.leftFilterOpen = !webPublisherAnalytics.leftFilterOpen" ng-class="{'navbtn--active': leftFilterOpen}">
-                                <i class="icon-filter-large"></i>
-                            </button>
-                        </div>
-
-                        <div class="sd-column-box--3">
-                            <!-- filters -->
-                            <div class="sd-filters-panel sd-filters-panel--border-right"
-                                ng-include="'analytics/filter-pane.html'">
-                            </div>
-                            <div class="sd-column-box__main-column-inner relative" id="scrollContainer">
-                                <table class="sd-table sd-table--shadowed sd-table--action-hover">
-                                    <thead>
-                                        <tr>
-                                            <th>Title <a class="icn-btn icn-btn--small">
-                                                <!-- <i class="icon-chevron-down-thin" ng-show="!ascending"></i>
-                                                <i class="icon-chevron-up-thin" ng-show="ascending"></i> -->
-                                            </a></th>
-                                            <th></th>
-                                            <th>Page Views <a class="icn-btn icn-btn--small icn-btn--disabled">
-                                                <!-- <i class="icon-chevron-down-thin"></i> -->
-                                            </a></th>
-                                            <th>Click Rate  <a class="icn-btn icn-btn--small icn-btn--disabled">
-                                                <!-- <i class="icon-chevron-down-thin"></i> -->
-                                            </a></th>
-                                            <th>Impressions <a class="icn-btn icn-btn--small icn-btn--disabled" ng-click="ascending = !ascending">
-                                                <!-- <i class="icon-chevron-down-thin"></i> -->
-                                            </a></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody ng-if="webPublisherAnalytics.tenantArticles"
-                                    infinite-scroll="webPublisherAnalytics.loadMoreTenantArticles()"
-                                    infinite-scroll-container="'#scrollContainer'">
-                                        <tr ng-repeat="article in webPublisherAnalytics.tenantArticles.items">
-                                            <td class="sd-table-two-rows">
-                                                <div class="no-padding sd-text__strong">
-                                                    <strong>{{article.title}}</strong>
-                                                </div>
-                                                <div class="no-padding">
-                                                    <span class="sd-text__date-time sd-text__italic">Category:</span><span class="sd-text__normal">{{article.route.name}}</span>
-                                                    <span ng-if="article.authors.length"class="sd-text__date-time sd-text__italic sd-margin-l--1">Authors:</span><span ng-repeat="author in article.authors" class="sd-text__normal">{{author.name}}</span>
-                                                    <span class="sd-text__date-time sd-text__italic sd-margin-l--1">Published:</span> <time>{{article.published_at | date:'yyyy.MM.dd HH:mm'}}</time>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <a ng-if="article._links.online.href"
-                                                    ng-href="{{article.tenant.subdomain ? 'http://' + article.tenant.subdomain + '.' + article.tenant.domain_name + article._links.online.href : 'http://' + article.tenant.domain_name + article._links.online.href}}" class="icn-btn" target="_blank">
-                                                    <i class="icon-external"></i>
-                                                </a>
-                                            </td>
-                                            <td>{{article.article_statistics.page_views_number}}</td>
-                                            <td>{{article.article_statistics.internal_click_rate}}</td>
-                                            <td>{{article.article_statistics.impressions_number}}</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <div ng-if="webPublisherAnalytics.tenantArticles.loading" class="item-group__loading" style="margin: 10px auto; line-height: 38px; height: 38px; text-align: center;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer class="bottom-bar ">
-    </footer>
+  <section class="sd-content sd-page-content--slide-in">
+    <div class="sd-loader" ng-if="loading"></div>
+    <div
+      class="sd-sidebar-menu sd-sidebar-menu--second-level sd-page-content__left-tabs"
+      ng-include="'sidebar-content.html'"
+    ></div>
+    <sp-analytics
+      class="sd-page-content__content-block sp-bottomBarMargin"
+      tenant="webPublisherAnalytics.tenant"
+      publisher="webPublisherAnalytics.publisher"
+    ></sp-analytics>
+    <footer classname="bottom-bar "></footer>
+  </section>
+  <footer className="bottom-bar " />
 </div>
