[ADD] add description input to routes

--- a/client/views/settings/website-management/manage-routes.html
+++ b/client/views/settings/website-management/manage-routes.html
@@ -44,6 +44,10 @@
                                     <label for="routeName" translate>name</label>
                                     <input type="text" class="line-input" id="routeName" ng-model="newRoute.name" required>
                                 </div>
+                                <div class="item">
+                                    <label for="routeDescription" translate>description</label>
+                                    <input type="text" class="line-input" id="routeDescription" ng-model="newRoute.description">
+                                </div>
                                 <div class="item" ng-class="{'sd-line-input sd-line-input--invalid': newRoute.id}">
                                         <label for="routeSlug" translate>slug</label>
                                         <input type="text" class="line-input" id="routeSlug" ng-model="newRoute.slug">
