--- a/client/views/output/index.html
+++ b/client/views/output/index.html
@@ -16,8 +16,8 @@
                     sd-tooltip="Filter" flow="right">
                     <i class="icon-filter-large"></i>
                 </button>
-                <div sd-search-handler data-title="Search" ng-model='webPublisherOutput.advancedFilters.term' data-debounce="500"></div>
-                <h3 class="subnav__page-title">Output Control</h3>
+                <h3 class="subnav__page-title sd-flex-no-grow">Output Control</h3>
+                <sd-search-handler data-label="Search" ng-model='webPublisherOutput.advancedFilters.term' data-debounce="500" data-borderleft="true"></sd-search-handler>
             </div>
             <div class="subnav subnav--lower-z-index">
                 <div class="subnav__content-bar">
