content lists react

--- a/client/views/content-lists/index.html
+++ b/client/views/content-lists/index.html
@@ -11,13 +11,7 @@
       class="sd-sidebar-menu sd-sidebar-menu--second-level sd-page-content__left-tabs"
       ng-include="'sidebar-content.html'"
     ></div>
-    <sp-content-lists
-      class="sd-page-content__content-block sp-bottomBarMargin"
-      tenant="webPublisherContentLists.tenant"
-      list="webPublisherContentLists.list"
-      publisher="webPublisherContentLists.publisher"
-      api="webPublisherContentLists.api"
-    ></sp-content-lists>
+    <div id="sp-content-lists-react-app" class="sd-page-content__content-block sp-bottomBarMargin"></div>
     <footer classname="bottom-bar "></footer>
   </section>
   <footer className="bottom-bar " />
