--- a/client/styles/dragNdrop.scss
+++ b/client/styles/dragNdrop.scss
@@ -1,37 +1,37 @@
 ul[dnd-list] {
+  min-height: 42px;
+
+  .dndPlaceholder {
+    background-color: #ddd;
+    display: block;
     min-height: 42px;
+  }
 
-     .dndPlaceholder {
-        background-color: #ddd;
-        display: block;
-        min-height: 42px;
-    }
-
-    li.selected .listElement {
-        background-color: $sd-hover;
-    }
+  li.selected .listElement {
+    background-color: $sd-hover;
+  }
 }
 
-.dropZone{
-    &--empty {
-        border: 2px dashed #adadad;
-        background-color: #ebebeb;
-    }
+.dropZone {
+  &--empty {
+    border: 2px dashed #adadad;
+    background-color: #ebebeb;
+  }
 
-    &--active {
-        border: 2px dashed $sd-blue;
-        background-color: $sd-hover;
-    }
+  &--active {
+    border: 2px dashed $sd-blue;
+    background-color: $sd-hover;
+  }
 
-    &__heading {
-        display: inline-block;
-        position: absolute;
-        top: 2.6rem;
-        left: 50%;
-        transform: translateY(-50%);
-        transform: translateX(-50%);
-        font-size: 2rem;
-        font-weight: 200;
-        color: $grayLight;
-    }
+  &__heading {
+    display: inline-block;
+    position: absolute;
+    top: calc(50% - 25px);
+    left: 50%;
+    transform: translateY(-50%);
+    transform: translateX(-50%);
+    font-size: 2rem;
+    font-weight: 200;
+    color: $grayLight;
+  }
 }
