--- a/client/views/output/index.html
+++ b/client/views/output/index.html
@@ -20,22 +20,30 @@
                 <sd-search-handler data-label="Search" ng-model='webPublisherOutput.advancedFilters.term' data-debounce="500" data-borderleft="true"></sd-search-handler>
             </div>
             <div class="subnav subnav--lower-z-index">
-                <div class="subnav__content-bar">
+                <div class="subnav__content-bar" ng-hide="superdesk.flags.authoring">
                     <sd-check ng-model="webPublisherOutput.listType" type="radio" ng-value="incoming" label-position="inside"
                         ng-disabled="webPublisherOutput.loadingArticles">Incoming content</sd-check>
                     <sd-check ng-model="webPublisherOutput.listType" type="radio" ng-value="published" label-position="inside"
                         ng-disabled="webPublisherOutput.loadingArticles">Published</sd-check>
                 </div>
+                <div class="subnav__content-bar" ng-show="superdesk.flags.authoring">
+                    <sd-check ng-model="webPublisherOutput.listType" type="radio" ng-value="incoming" label-position="inside"
+                        ng-disabled="webPublisherOutput.loadingArticles" sd-tooltip="Incoming content" flow="right"><i class="icon-ingest"></i></sd-check>
+                    <sd-check ng-model="webPublisherOutput.listType" type="radio" ng-value="published" label-position="inside"
+                        ng-disabled="webPublisherOutput.loadingArticles" sd-tooltip="Published" flow="right"><i class="icon-expand-thin"></i></sd-check>
+                </div>
                 <div class="subnav__spacer subnav__spacer--no-margin"></div>
-                <div class="subnav__stretch-bar"></div>
-                <div class="subnav__spacer subnav__spacer--no-margin"></div>
-                <div class="subnav__content-bar sd-flex-wrap">
-                    <span>Incoming:</span><span class="badge sd-margin-l--1">{{webPublisherOutput.articlesCount.incoming}}</span>
-                    <span class="sd-margin-l--2">Published:</span><span class="badge sd-margin-l--1">{{webPublisherOutput.articlesCount.published}}</span>
+                <div class="subnav__content-bar sd-flex-wrap ml-auto sd-padding-l--1" ng-class="{'sd-margin-r--1': superdesk.flags.authoring}">
+                    <div class="sd-margin-r--1">
+                        <span>Incoming:</span><span class="badge sd-margin-l--0-5">{{webPublisherOutput.articlesCount.incoming}}</span>
+                    </div>
+                    <div>
+                        <span>Published:</span><span class="badge sd-margin-l--0-5">{{webPublisherOutput.articlesCount.published}}</span>
+                    </div>
                 </div>
                 <div class="subnav__spacer subnav__spacer--no-margin" ng-show="webPublisherOutput.listType == 'published' && !webPublisherOutput.swimlaneView"></div>
-                <div class="subnav__content-bar" ng-show="webPublisherOutput.listType == 'published' && !webPublisherOutput.swimlaneView">
-                    <div class="dropdown" dropdown="" ng-show="webPublisherOutput.listType == 'published' && !webPublisherOutput.swimlaneView">
+                <div class="subnav__content-bar sd-flex-no-shrink" ng-class="{'sd-margin-l--1 sd-margin-r--1': superdesk.flags.authoring}" ng-show="webPublisherOutput.listType == 'published' && !webPublisherOutput.swimlaneView">
+                    <div class="dropdown dropdown--align-right" dropdown="" ng-show="webPublisherOutput.listType == 'published' && !webPublisherOutput.swimlaneView">
                         <button class="dropdown__toggle dropdown-toggle" dropdown-toggle="" aria-haspopup="true" aria-expanded="false">{{webPublisherOutput.filterByTenant.name || 'All Tenants'}}<span class="dropdown__caret"></span></button>
                         <ul class="dropdown__menu dropdown__menu--scrollable">
                             <li><button ng-click="webPublisherOutput.filterByTenant=null">All Tenants</button></li>
