Side menu active state fix

--- a/client/views/sidebar-content.html
+++ b/client/views/sidebar-content.html
@@ -3,7 +3,7 @@
     <a
       href="#/publisher/dashboard"
       class="sd-sidebar-menu__btn"
-      ng-class="{'sd-sidebar-menu__btn--active': currentRoute.href === '/publisher/dashboard'}"
+      ng-class="{'sd-sidebar-menu__btn--active': superdesk.currentRoute.href === '/publisher/dashboard'}"
     >
       <i class="sd-sidebar-menu__main-icon big-icon--dashboard-alt"></i>
     </a>
@@ -12,7 +12,7 @@
     <a
       href="#/publisher/output-control"
       class="sd-sidebar-menu__btn"
-      ng-class="{'sd-sidebar-menu__btn--active': currentRoute.href === '/publisher/output-control'}"
+      ng-class="{'sd-sidebar-menu__btn--active': superdesk.currentRoute.href === '/publisher/output-control'}"
     >
       <i class="sd-sidebar-menu__main-icon big-icon--web"></i>
     </a>
