--- a/client/views/settings/index.html
+++ b/client/views/settings/index.html
@@ -7,7 +7,7 @@
                 >Website Management</a></li>
             <li><a href="" class="sd-left-nav__btn"
                 ng-class="{'sd-left-nav__btn--active': webPublisherSettings.activePanel === 'rules'}"
-                ng-click="webPublisherSettings.changePanel('rules')"
+                ng-click="webPublisherSettings.changePanel('rules'); webPublisherSettings.togglePreviewRule()"
                 >Publishing Rules</a></li>
         </ul>
         <div class="sp-manage-overlay"
