--- a/client/views/settings/rules/rule-preview.html
+++ b/client/views/settings/rules/rule-preview.html
@@ -1,25 +1,28 @@
 <div class="side-panel__header side-panel__header--border-b">
-	<a class="icn-btn side-panel__close" ng-click="webPublisherSettings.togglePreviewRule()"><i class="icon-close-small"></i></a>
+	<div class="side-panel__tools">
+		<a class="icn-btn" ng-click="webPublisherSettings.editRule(webPublisherSettings.selectedRule, webPublisherSettings.selectedRule.tenantCode); webPublisherSettings.togglePreviewRule()"><i class="icon-pencil"></i></a>
+		<a class="icn-btn" ng-click="webPublisherSettings.togglePreviewRule()"><i class="icon-close-small"></i></a>
+	</div>
 	<h3 class="side-panel__heading">Rule preview</h3>
 </div>
 
 <div class="side-panel__content">
 	<div class="side-panel__content-block">
-		<h3>{{webPublisherSettings.selectedRule.name}}</h3>
+		<h3 class="sd-margin-b--1">{{webPublisherSettings.selectedRule.name}}</h3>
 		<p>{{webPublisherSettings.selectedRule.description}}</p>
-		<span class="label label--primary margin--right"
+		<span class="label label--primary label--hollow margin--right"
 			ng-repeat="part in webPublisherSettings.makeExpressionReadable(webPublisherSettings.selectedRule.expression)">
 			{{part}}
 		</span>
 		<p class="codeBlock">
 			{{webPublisherSettings.selectedRule.expression}}
 		</p>
-		<p>Send to:</p>
-		<span class="label label--primary margin--right"
+		<p class="form-label sd-d-block">Send to:</p>
+		<span class="label label--darkBlue2 margin--right"
 			ng-repeat="dest in webPublisherSettings.selectedRule.configuration.destinations">
 			{{webPublisherSettings.getTenantNameByCode(dest.tenant)}}
 		</span>
-		<span ng-if="webPublisherSettings.selectedRule.configuration.route" class="label label--success margin--right" ng-class="{'label--hollow' : !webPublisherSettings.selectedRule.configuration.published}">
+		<span ng-if="webPublisherSettings.selectedRule.configuration.route" class="label margin--right" ng-class="{'label--success' : webPublisherSettings.selectedRule.configuration.published}">
 			{{webPublisherSettings.getRouteNameByTenantAndId(webPublisherSettings.selectedRule.tenantCode , webPublisherSettings.selectedRule.configuration.route)}}
 		</span>
 		<span ng-if="webPublisherSettings.selectedRule.configuration.paywall_secured" class="label label--red2 margin--right">
