Website management UI improvements

--- a/client/views/settings/website-management/manage-nav.html
+++ b/client/views/settings/website-management/manage-nav.html
@@ -1,5 +1,5 @@
 <div class="subnav subnav--padded subnav--lower-z-index">
-    <h3 class="sd-content-nav-title">Website</h3>
+    <h3 class="sd-content-nav-title sd-content-nav-title--uppercase">Website</h3>
 </div>
 <nav class="sd-content-nav">
     <ul>
