--- a/client/views/settings/website-management/manage.html
+++ b/client/views/settings/website-management/manage.html
@@ -1,7 +1,7 @@
 <div class="subnav">
     <a ng-click="webPublisherSettings.changePanel('tenant')" class="navbtn navbtn--left" sd-tooltip="Dashboard" flow="right"><i class="icon-arrow-left"></i></a>
     <h3 class="subnav__page-title">{{webPublisherSettings.selectedSite.name}}</h3>
-    <div class="pull-right">
+    <div class="pull-right sd-margin-r--2">
         <a class="btn btn--text-only" target="_blank"
             ng-href="{{webPublisherSettings.selectedSite.subdomain ? 'http://' + webPublisherSettings.selectedSite.subdomain + '.' + webPublisherSettings.selectedSite.domain_name: 'http://' + webPublisherSettings.selectedSite.domain_name}}">
             <i class="icon-globe"></i> Open website
