--- a/client/views/output/index.html
+++ b/client/views/output/index.html
@@ -33,7 +33,23 @@
                         ng-disabled="webPublisherOutput.loadingArticles" sd-tooltip="Published" flow="right"><i class="icon-expand-thin"></i></sd-check>
                 </div>
                 <div class="subnav__spacer subnav__spacer--no-margin"></div>
-                <div class="subnav__content-bar sd-flex-wrap ml-auto sd-padding-l--1" ng-class="{'sd-margin-r--1': superdesk.flags.authoring}">
+                <div class="subnav__content-bar sd-flex-wrap ml-auto sd-padding-l--1">
+                    <div class="dropdown dropdown--align-right" dropdown>
+                        <button class="dropdown__toggle" dropdown__toggle>
+                            Updated<span class="dropdown__caret"></span>
+                        </button>
+                        <ul class="dropdown__menu">
+                            <li><button>Updated</button></li>
+                            <li><button>Created</button></li>
+                            <li><button>Route</button></li>
+                            <li><button>Title</button></li>                            
+                        </ul>
+                    </div>
+                    <a class="icn-btn ng-hide" sd-tooltip="Descending" flow="bottom" ng-click="sortDesc = !sortDesc" ng-hide="!sortDesc"><i class="icon-descending"></i></a>
+                    <a class="icn-btn" sd-tooltip="Ascending" flow="bottom" ng-click="sortDesc = !sortDesc" ng-show="!sortDesc"><i class="icon-ascending"></i></a>
+                </div>
+                <div class="subnav__spacer subnav__spacer--no-margin"></div>
+                <div class="subnav__content-bar sd-flex-wrap sd-padding-l--1 ui-responsive-small--d-none ui-responsive-small--d-block if-authoring--d-none" ng-class="{'sd-margin-r--1': superdesk.flags.authoring}">
                     <div class="sd-margin-r--1">
                         <span>Incoming:</span><span class="badge sd-margin-l--0-5">{{webPublisherOutput.articlesCount.incoming}}</span>
                     </div>
